--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "tailwind.config.js",
   "scripts": {
-    "dev": "npx tailwindcss -i ./src/css/input.css -o ./public/css/style.css --watch"
+    "dev": "npx tailwindcss -i ./src/tailwindcss.css -o ./public/css/tailwindcss.css --watch",
+    "prod": "npx tailwindcss -i ./src/tailwindcss.css -o ./public/css/tailwindcss.css --minify"
   },
   "repository": {
     "type": "git",
